kubernetes/apps/base/monitoring/monitoring-common/config/referencegrant-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: prometheus-cdn
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: keiretsu-top
  to:
    - group: ""
      kind: Service
      name: kube-prometheus-stack-prometheus
